@@ -1,10 +1,9 @@
-from datetime import datetime
 from flask import Blueprint, request
 from flask.ext.login import current_user, login_required
 
 from _15thnight.core import send_out_alert
 from _15thnight.forms import AlertForm
-from _15thnight.models import Alert, Need, Response
+from _15thnight.models import Alert
 from _15thnight.util import required_access, jsonify, api_error
 
 
@@ -50,7 +49,7 @@ def get_alert(alert_id):
         if alert.user.id != current_user.id:
             return api_error('Permission denied')
         data = alert.to_advocate_json()
-    else: # is an admin
+    else:  # is an admin
         data = alert.to_advocate_json()
     return jsonify(data)
 
@@ -84,7 +83,7 @@ def delete_alert(id):
     """
     Delete an alert.
     """
-    return 'Not Implemented', 501 # We do not support a UI for this
+    return 'Not Implemented', 501  # We do not support a UI for this
     if current_user.role == 'advocate':
         alert = Alert.get_user_alert(current_user, id)
     else:
