@@ -27,23 +27,24 @@ def send_out_alert(alert_form):
     providers = User.providers_with_services(need_ids)
     for provider in providers:
         needs_provided = [
-            need for need in provider.services if need.id in need_ids
+            need_ for need_ in provider.services if need_.id in need_ids
         ]
-        gender = ' ' + alert.gender if alert.gender != 'unspecified' else ''
-        needs = ", ".join([need.name for need in needs_provided])
+        gender = alert.get_gender()
+        needs = ", ".join(
+            [need_provided.name for need_provided in needs_provided])
         body = ('New 15th night alert!\n'
                 '%d y/o%s\n'
                 'Needs: %s\n'
                 'Desc: %s\n'
-                'Respond at %s/r/%s') % (
+                'Respond at %sr/%s') % (
                     alert.age, gender, needs,
-                    alert_form.description.data, url_for(
-                        '/', _external=True), str(alert.id)
+                    alert_form.description.data,
+                    url_for('index', _external=True), str(alert.id)
                 )
         provider_notified = ProviderNotified(
             provider=provider,
             alert=alert,
-            needs=Need.get_by_ids([need.id for need in needs_provided])
+            needs=Need.get_by_ids([need_id.id for need_id in needs_provided])
         )
         # TODO: test
         provider_notified.save()
@@ -98,16 +99,16 @@ def respond_to_alert(provider, needs_provided, alert):
     return response
 
 
-def send_out_resolution(need):
+def resolve_need(need):
     """
-    Sends out a resolution for a need to providers.
+    Resolve a need and trigger an alert closed if necessary.
     """
     alert = need.alert
     advocate = alert.user
     message = ''
     if need.resolve_message != '':
         message = '\nMsg: ' + need.resolve_message
-    gender = '' if alert.gender == 'unspecified' else ' ' + alert.gender
+    gender = alert.get_gender()
     args = (advocate.name, advocate.organization,
             need.service.name, alert.age, gender)
     accepted = ('15th Night help accepted!\n'
@@ -118,7 +119,8 @@ def send_out_resolution(need):
               '%d y/o%s') % args
 
     selected = set()
-    users = set(map(lambda provision: provision.response.user, need.provisions))
+    users = set(map(
+        lambda provision: provision.response.user, need.provisions))
     for provision in need.provisions:
         if provision.selected:
             selected.add(provision.response.user_id)
@@ -133,6 +135,32 @@ def send_out_resolution(need):
                 body=body
             )
         )
+    # Check if alert is closed, if so, send out resolution notices
+    _send_alert_resolution_notice(need)
+
+
+def _send_alert_resolution_notice(need):
+    """
+    Check if need.alert is closed and trigger an alert closed notification.
+    """
+    if need.alert.is_closed:
+        alert = need.alert
+        age = alert.age
+        gender = alert.get_gender()
+        created = alert.created_at.strftime("%m/%d at %I:%M %p")
+        body = (
+            "Alert sent on %s for a %syo%s has been closed."
+            "\nSee: %s"
+            % (created, age, gender, alert.url))
+        providers = [
+            provider_notified.provider for provider_notified
+            in alert.providers_notified
+        ]
+        subject = "Alert has been closed."
+
+        for provider in providers:
+            queue_send_message.apply_async(args=[
+                provider.email, provider.phone_number, subject, body])
 
 
 def send_password_reset(user):
@@ -183,8 +211,8 @@ def send_help_message(user, message):
         sender=sender,
         reply_to=sender,
         subject="15th Night RAN Website Support Request",
-        body=render_template('email/support_request.txt',
-            provider=user, message=message),
+        body=render_template(
+            'email/support_request.txt', provider=user, message=message),
         recipients=[current_app.config.get('SUPPORT_EMAIL', '')]
     )
     queue_send_email.apply_async(kwargs=dict(message=message))
