@@ -2,7 +2,6 @@ from celery import Celery
 from flask_mail import Message
 
 from _15thnight.email import mailer
-from _15thnight.email_client import send_email
 from _15thnight.twilio_client import send_sms
 
 
@@ -35,9 +34,9 @@ def queue_send_message(email, number, subject, body):
     """
     if number:
         send_sms(to_number=number, body=body)
-    #send_email(email, subject, body)
     message = Message(body=body, subject=subject, recipients=[email])
     mailer.send(message)
+
 
 @celery.task
 def queue_send_email(message):
